--- a/header.html
+++ b/header.html
@@ -3,10 +3,53 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="header.css" type="text/css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title></title>
 </head>
 
 <body>
+    <section id="logo">
+    <a href="index.html">
+        <img src="logo.png">
+        </a>
+    </section>
+
+    <div id="sideMenu" class="sideNav">
+    <a href="javascript:void(0)" class="closebtn" style="font-size: 36px; float: right; width: 20px;" onclick="closeMenu()">&times;</a>
+
+
+    <div class="punkter">
+    <a href="smykker.html">Smykker</a>
+    <a href="galleri.html">Galleri</a>
+    <a href="om.html">Om MaryLou</a>
+    <a href="kontakt.html">Kontakt</a>
+    </div>
+        </div>
+    <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;font-weight:10;margin-left: 2vw; margin-top: 1vw; color:black; "></i></span>
+
+    <div id="topMenu" class="topNav">
+    <div class="punkter">
+    <a href="smykker.html">Smykker</a>
+    <a href="galleri.html">Galleri</a>
+    <a href="om.html">Om MaryLou</a>
+    <a href="kontakt.html">Kontakt</a>
+    </div>
+
+    </div>
+
+    <script>
+    //Åben side navigation til mobil størrelse
+        function openNav(){
+            document.querySelector("#sideMenu").style.width = "100%";
+        }
+
+        //Luk Side navigation til mobilstørrelse
+        function closeMenu(){
+            document.querySelector("#sideMenu").style.width = "0";
+        }
+
+    </script>
 
 </body>
 </html>
