--- a/om.html
+++ b/om.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Om side som omhandler Marylou Jewerllery">
     <link rel="stylesheet" href="om.css" type="text/css">
+<!--    link til icon-->
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <title>Om Marylou Jewellery</title>
 </head>
 
@@ -19,7 +21,7 @@
             <p class="data-text"></p>
             </article>
                  </template>
-
+<div onclick="topFunction()"> <i style='font-size:24px' class='fas'>&#xf062;</i></div>
 
     </main>
 
@@ -53,6 +55,26 @@
                 //Placer klonen i HTML
                 pageContainer.appendChild(klon);
             })
+        }
+
+        //Når brugeren scroller 20px ned skal knappen vises
+        window.onscroll = function(){
+            scrollFunction()
+        };
+
+        function scrollFunction(){
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20){
+                document.querySelector(".fas").style.display = "block";
+
+            } else {
+                document.querySelector(".fas").style.display ="none";
+            }
+        }
+
+        // når brugeren klikker på iconet skal den automatisk scrolle til toppen af dokumentet
+        function topFunction(){
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
         }
 
     </script>
