til top knap javascript og lidt styling på navigationen

--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
     </section>
 
     <div id="sideMenu" class="sideNav">
-    <a href="javascript:void(0)" class="closebtn" style="font-size: 36px; float: right; width: 20px;" onclick="closeMenu()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" style="font-size: 36px; float: right; width: 20px; border: none;" onclick="closeMenu()">&times;</a>
 
 
     <div class="punkter">
