--- a/index.html
+++ b/index.html
@@ -3,10 +3,144 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Om side som omhandler Marylou Jewerllery">
+    <link rel="stylesheet" href="index.css" type="text/css">
     <title>Marylou Jewellery</title>
 </head>
 
 <body>
+    <main>
+     <section id="container" class="data-container"></section>
+        <template class="data-template">
+        <article class="wpPage">
+            <h1 class="data-title"></h1>
+            <p class="data-text"></p>
+            </article>
+                 </template>
+
+        <section id="container1" class="data-container1"></section>
+        <template class="data-template1">
+        <article class="wpPage">
+            <h1 class="data-title1"></h1>
+            <p class="data-text1"></p>
+            </article>
+                 </template>
+
+
+        <section id="container2" class="data-container2"></section>
+        <template class="data-template2">
+        <article class="wpPage">
+            <h1 class="data-title2"></h1>
+            <p class="data-text2"></p>
+            </article>
+                 </template>
+
+         <section id="container3" class="data-container3"></section>
+        <template class="data-template3">
+        <article class="wpPage">
+            <h1 class="data-title3"></h1>
+            <p class="data-text3"></p>
+            </article>
+                 </template>
+
+    </main>
+
+    <script>
+        //Hent Json filen når DOM er loaded
+        document.addEventListener("DOMContentLoaded", hentJson);
+
+        //Find DOM Elemterne
+        let pages;
+        let pageTemplate = document.querySelector(".data-template");
+        let pageContainer = document.querySelector(".data-container");
+
+        let billede;
+        let billedeTemplate = document.querySelector(".data-template1");
+        let billedeContainer = document.querySelector(".data-container1");
+
+        let billede1;
+        let billede1Template = document.querySelector(".data-template2");
+        let billede1Container = document.querySelector(".data-container2");
+
+        let text;
+        let textTemplate = document.querySelector(".data-template3");
+        let textContainer = document.querySelector(".data-container3");
+
+        //Hent Json filen ind
+        async function hentJson(){
+            let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=dansk-smykkedesign-og-kunsthandvaerk");
+            pages=await jsonData.json();
+            visPage();
+
+            let jsonData1 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=billede1");
+            billede = await jsonData1.json();
+            visBillede();
+
+            let jsonData2 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=billede2");
+            billede1 = await jsonData2.json();
+            visBillede1();
+
+            let jsonData3 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=eventyr");
+            text = await jsonData3.json();
+            visText();
+        }
+
+        function visPage(){
+            console.log(pages);
+
+            //Løb json filen igennem
+            pages.forEach(page =>{
+                let klon = pageTemplate.cloneNode(true).content;
+                klon.querySelector(".data-title").textContent = page.title.rendered;
+                klon.querySelector(".data-text").innerHTML = page.content.rendered;
+
+                //Placer klonen i HTML
+                pageContainer.appendChild(klon);
+            })
+        }
+
+        function visBillede(){
+            console.log(billede);
+
+            //Løb json filen igennem
+            billede.forEach(billede =>{
+                let klon = billedeTemplate.cloneNode(true).content;
+                klon.querySelector(".data-title1").textContent = billede.title.rendered;
+                klon.querySelector(".data-text1").innerHTML = billede.content.rendered;
+
+                //Placer klonen i HTML
+                billedeContainer.appendChild(klon);
+            })
+        }
+
+        function visBillede1(){
+            console.log(billede1);
+
+            //Løb json filen igennem
+            billede1.forEach(billede1 =>{
+                let klon = billede1Template.cloneNode(true).content;
+                klon.querySelector(".data-title2").textContent = billede1.title.rendered;
+                klon.querySelector(".data-text2").innerHTML = billede1.content.rendered;
+
+                //Placer klonen i HTML
+                billede1Container.appendChild(klon);
+            })
+        }
+
+        function visText(){
+            console.log(text);
+
+            //Løb json filen igennem
+            text.forEach(text =>{
+                let klon = textTemplate.cloneNode(true).content;
+                klon.querySelector(".data-title3").textContent = text.title.rendered;
+                klon.querySelector(".data-text3").innerHTML = text.content.rendered;
+
+                //Placer klonen i HTML
+                textContainer.appendChild(klon);
+            })
+        }
+    </script>
 
 </body>
 </html>
