--- a/header.html
+++ b/header.html
@@ -16,24 +16,29 @@
     </section>
 
     <div id="sideMenu" class="sideNav">
-    <a href="javascript:void(0)" class="closebtn" style="font-size: 36px; float: right; width: 20px; border: none;" onclick="closeMenu()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" style="font-size: 30px; float: right; width: 20px; border: none;" onclick="closeMenu()">&times;</a>
 
 
     <div class="punkter">
-    <a href="smykker.html">Smykker</a>
-    <a href="galleri.html">Galleri</a>
-    <a href="om.html">Om MaryLou</a>
-    <a href="kontakt.html">Kontakt</a>
+    <a href="smykker.html">SMYKKER</a>
+    <a href="vaerkstedet.html">VÆRKSTED</a>
+    <a href="om.html">OM MARYLOU</a>
+    <a href="kontakt.html">KONTAKT</a>
     </div>
         </div>
     <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;font-weight:10;margin-left: 2vw; margin-top: 1vw; color:black; "></i></span>
 
     <div id="topMenu" class="topNav">
+          <section id="logo1">
+    <a href="index.html">
+        <img src="logo.png">
+        </a>
+    </section>
     <div class="punkter">
-    <a href="smykker.html">Smykker</a>
-    <a href="galleri.html">Galleri</a>
-    <a href="om.html">Om MaryLou</a>
-    <a href="kontakt.html">Kontakt</a>
+    <a href="smykker.html">SMYKKER</a>
+    <a href="vaerkstedet.html">VÆRKSTED</a>
+    <a href="om.html">OM MARYLOU</a>
+    <a href="kontakt.html">KONTAKT</a>
     </div>
 
     </div>
