--- a/smykker.html
+++ b/smykker.html
@@ -4,31 +4,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="smykker.css" type="text/css">
+    <!--Den nedstående <link rel> bruges for at hente et ikon fra w3schools -https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-shopping-basket&unicon=f291 -->
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
     <title></title>
 </head>
 
 <body>
-    <main>
-
-        <section id="filtrering">
-        <h1></h1>
+    <nav>
+    <section id="filtrering">
             <div class="knapper">
-            <button class="menu_item" data_kategori="alle">Alle</button>
-            <button class="menu_item" data_kategori="Ringe">Ringe</button>
-            <button class="menu_item" data_kategori="Øreringe">Øreringe</button>
-            <button class="menu_item" data_kategori="Armbånd">Armbånd</button>
-            <button class="menu_item" data_kategori="Halskæder">Halskæder</button>
-            <button class="menu_item" data_kategori="Vedhæng">Vedhæng</button>
+            <button class="menu_item" data_kategori="alle">ALLE</button>
+            <button class="menu_item" data_kategori="Ringe">RINGE</button>
+            <button class="menu_item" data_kategori="Øreringe">ØRERINGE</button>
+            <button class="menu_item" data_kategori="Armbånd">ARMBÅND</button>
+            <button class="menu_item" data_kategori="Halskæder">HALSKÆDER</button>
+            <button class="menu_item" data_kategori="Vedhæng">VEDHÆNG</button>
                 <h1></h1>
+                <!--Ikonet er hentet fra w3schools - https://www.w3schools.com/icons/tryit.asp?icon=fas_fa-shopping-basket&unicon=f291-->
+                <i class='fas fa-shopping-basket' style='font-size:18px; color:#F18FAB; width: 20px; height: 20px; margin-top: 8px;'></i>
             </div>
         </section>
+        </nav>
+    <main>
+
+
 
         <section class="smykker"></section>
         <template class="smykke-template">
         <article class="smykke-container">
             <img class="image" src="" alt="">
+            <div id="text1">
             <div class="titel"></div>
             <div class="pris"></div>
+            <button class="koeb">Læg i kurven</button>
+                </div>
             <div class="kategori"></div>
 
             </article>
