--- a/om.html
+++ b/om.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="om.css" type="text/css">
 <!--    link til icon-->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
     <title>Om Marylou Jewellery</title>
 </head>
 
