--- a/om.html
+++ b/om.html
@@ -22,6 +22,26 @@
             <p class="data-text"></p>
             </article>
                  </template>
+        <div class="linje"></div>
+
+        <section id="container1" class="data-container1"></section>
+        <template class="data-template1">
+        <article class="wpPage">
+            <h1 class="data-title1"></h1>
+            <p class="data-text1"></p>
+            </article>
+                 </template>
+
+        <div class="linje1"></div>
+
+        <section id="container2" class="data-container2"></section>
+        <template class="data-template2">
+        <article class="wpPage">
+            <h1 class="data-title2"></h1>
+            <p class="data-text2"></p>
+            </article>
+                 </template>
+
 <div onclick="topFunction()"> <i style='font-size:24px' class='fas'>&#xf062;</i></div>
 
     </main>
@@ -37,11 +57,27 @@
         let pageTemplate = document.querySelector(".data-template");
         let pageContainer = document.querySelector(".data-container");
 
+        let billede;
+        let billedeTemplate = document.querySelector(".data-template1");
+        let billedeContainer = document.querySelector(".data-container1");
+
+        let text;
+        let textTemplate = document.querySelector(".data-template2");
+        let textContainer = document.querySelector(".data-container2");
+
         //Hent Json filen ind
         async function hentJson(){
             let jsonData = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=marylou-jewellery");
             pages=await jsonData.json();
             visPage();
+
+            let jsonData1 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=129-2");
+            billede = await jsonData1.json();
+            visBillede();
+
+            let jsonData2 = await fetch("https://camilla-pedersen.dk/kea/MaryLou/wordpress/wp-json/wp/v2/pages?slug=132-2");
+            text = await jsonData2.json();
+            visText();
         }
 
         function visPage(){
@@ -57,6 +93,36 @@
                 pageContainer.appendChild(klon);
             })
         }
+
+        function visBillede(){
+            console.log(billede);
+
+            //Løb json filen igennem
+            billede.forEach(billede =>{
+                let klon = billedeTemplate.cloneNode(true).content;
+                klon.querySelector(".data-title1").textContent = billede.title.rendered;
+                klon.querySelector(".data-text1").innerHTML = billede.content.rendered;
+
+                //Placer klonen i HTML
+                billedeContainer.appendChild(klon);
+            })
+        }
+
+        function visText(){
+            console.log(text);
+
+            //Løb json filen igennem
+            text.forEach(text =>{
+                let klon = textTemplate.cloneNode(true).content;
+                klon.querySelector(".data-title2").textContent = text.title.rendered;
+                klon.querySelector(".data-text2").innerHTML = text.content.rendered;
+
+                //Placer klonen i HTML
+                textContainer.appendChild(klon);
+            })
+        }
+
+
 
         //når siden er loaded skal top iconet gemmes indtil der scrolles
         document.addEventListener("DOMContentLoaded", gem);
