--- a/header.html
+++ b/header.html
@@ -28,7 +28,7 @@
     <a href="kontakt.html">KONTAKT</a>
     </div>
         </div>
-    <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;font-weight:10;margin-left: 2vw; margin-top: 1vw; color:black; "></i></span>
+    <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;font-weight:10;margin-left: 1vw; margin-top: 1vw; color:#F18FAB; "></i></span>
 
     <div id="topMenu" class="topNav">
           <section id="logo1">
