--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@
     <main>
 
         <section id="main_grid">
-    <!--Template til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
+    <!--Templates til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
     <section id="container" class="data-container"></section>
         <template class="data-template">
         <article class="wpPage">
