dropdown knap filtrering i mobil str

--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<footer>
     <main>
     <!--Template til indholdet på om siden, som skal bruges i javascript for at hente det dynamiske indhold ved hjælp af en json fil fra wordpress-->
     <section id="container" class="data-container"></section>
@@ -48,6 +48,7 @@
 
 
     </main>
+    </footer>
 
     <!--<?php include "footer.html;?>-->
 
