--- a/smykker.html
+++ b/smykker.html
@@ -53,7 +53,7 @@
             <div id="text1">
             <div class="titel"></div>
             <div class="pris"></div>
-            <button class="koeb">Læg i kurven</button>
+            <button class="koeb">Læs mere</button>
                 </div>
             <div class="kategori"></div>
 
