--- a/header.html
+++ b/header.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
+    <section id="container">
     <section id="logo">
     <a href="index.html">
-        <img src="logo.png">
         </a>
     </section>
+        </section>
 
     <div id="sideMenu" class="sideNav">
     <a href="javascript:void(0)" class="closebtn" style="font-size: 30px; float: right; width: 20px; border: none;" onclick="closeMenu()">&times;</a>
@@ -31,12 +32,14 @@
     <span onclick="openNav()"><i class="fa fa-navicon" style="font-size:35px;font-weight:10;margin-left: 1vw; margin-top: 1vw; color:#F18FAB; "></i></span>
 
     <div id="topMenu" class="topNav">
-          <section id="logo1">
+
+    <div class="punkter">
+         <section id="container1">
+        <section id="logo1">
     <a href="index.html">
-        <img src="logo.png">
         </a>
     </section>
-    <div class="punkter">
+            </section>
     <a href="smykker.html">SMYKKER</a>
     <a href="vaerkstedet.html">VÆRKSTED</a>
     <a href="om.html">OM MARYLOU</a>
