opsætning af single css

--- a/single.html
+++ b/single.html
@@ -13,14 +13,15 @@
 
     <main>
         <section class="data-container">
-            <article>
                 <img class="image" src="" alt="">
+                <section class="information">
                 <h1 class="titel"></h1>
                 <div class="langbeskrivelse"></div>
                 <div class="pris"></div>
                 <div class="kategori"></div>
                 <div class="id"></div>
-            </article>
+                    <button class="kobnu">Læg i kurven</button>
+                </section>
         </section>
     </main>
 
