--- a/smykker.html
+++ b/smykker.html
@@ -121,6 +121,8 @@
             })
         }
 
+        /*Jeg har brugt w3schools - https://www.w3schools.com/howto/howto_js_dropdown.asp
+        Til at få filtreringspunkterne til at komme frem når der klikkes på filteringsknappen */
           function dropFunction(){
 
             document.querySelector(".smykker").style.marginTop = "250px";
